--- a/src/assets/css/style.css
+++ b/src/assets/css/style.css
@@ -17,12 +17,8 @@ body {
     overflow-x: hidden;
 }
 
-p, span { color: #999; }
-hr { 
-    border-top-color: #CCC; 
-    margin-top: 10px;
-    margin-bottom: 10px;
-}
+p, span { color: slategray; }
+
 .form-control::-webkit-input-placeholder { color: #999; }  
 .form-control:-ms-input-placeholder { color: #999; }  
 .form-control::placeholder { color: #999; }
@@ -170,7 +166,7 @@ ul {
     width: 480px;
     margin-right: 30px;
     border-radius: 0;
-    border-color: #161625;
+    border-color: #000000;
     font-size: 1.2rem;
 }
 
@@ -182,7 +178,7 @@ ul {
     transition: all 0.3s ease;
 }
 
-.tm-search-button:hover { background-color: #09b6b6; }
+.tm-search-button:hover { background-color: #000000; }
 
 .tm-search-icon {
     color: white;
@@ -193,11 +189,11 @@ ul {
     display: block;
     position: relative;
 	cursor: pointer;
+    text-decoration: none;
 }
 
 .tm-post-link-inner {
     overflow: hidden;
-    background: #3085a3;
 }
 
 .tm-post-link img {
@@ -205,14 +201,12 @@ ul {
 	display: block;
 	min-height: 100%;
 	max-width: 100%;
-	opacity: 0.8;
 }
 
 .effect-lily img {
 	max-width: none;
 	width: -webkit-calc(100% + 50px);
 	width: calc(100% + 50px);
-	opacity: 0.7;
 	-webkit-transition: opacity 0.35s, -webkit-transform 0.35s;
 	transition: opacity 0.35s, transform 0.35s;
 	-webkit-transform: translate3d(-40px,0, 0);
@@ -237,16 +231,18 @@ ul {
 }
 
 .tm-post-title {
-    font-size: 1.7rem;
+    font-size: 1.4rem;
     transition: all 0.3s ease;
+    text-decoration: none;
 }
 
 .tm-h3 {
-    font-size: 1.3rem;
-    color: #999;
+    font-size: 1.1rem;
+    color: rgb(39, 32, 32);
+    text-decoration: none;
 }
 
-.tm-post-link:hover .tm-post-title { color: #444458; }
+.tm-post-link:hover .tm-post-title { color: #090913; }
 
 .tm-btn {
     display: inline-block;
@@ -265,7 +261,7 @@ ul {
 .tm-btn-small { padding: 8px 33px; }
 
 .tm-btn-primary:hover {
-    background-color: #09b6b6;
+    background-color: #0a0724;
     color: white;
 }
 
@@ -319,7 +315,6 @@ ul {
 .tm-copyright { text-align: right; }
 
 /* Single Post page */
-hr.tm-hr-primary { border-top: 5px solid #161625; }
 
 video {
     width: 100%;
